# stockCheck

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_report.yml
api/: line_webhook.py
config/: subscriptions.json  symbol_metadata.json
docs/: daily_pipeline.md  source_examples.md
scripts/: run_pipeline.py  run_reporter.py  run_tw.py  run_us.py
src/: stock_reporter.py
src/stockcheck/: daily_pipeline.py  stock_reporter.py
src/stockcheck/pipeline/: db.py  indicators.py  models.py  runner.py  sources.py  utils.py
src/stockcheck/reporter/: ai.py  institutional.py  line_messaging.py  market_data.py  message.py  models.py  runner.py  storage.py
tests/: test_gemini.py  test_line.py
